Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9278

can't go to next line with text wrap in fakevim

XMLWordPrintable

      When a line is word wrapped, it cannot be iterated over pressing j/nextline in fakevim.

      Not vim behavior and requires use of mouse to "break free". Additionally one can jump to previous line just as normal, it is only jump to next line that is affected.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            jnewton Jason Newton
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes